--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,14 @@
-<p>product works!</p>
+<div>
+  <h1>Add product</h1>
+  <input type="text" placeholder="Product Name"
+         (change)="handleInputChange($event, 'productName')"/>
+
+  <select (change)="handleInputChange($event, 'category')">
+    <option>SMARTPHONE</option>
+    <option>LAPTOP</option>
+    <option>PC</option>
+  </select>
+
+  <input type="number" placeholder="Product Price" (change)="handleInputChange($event, 'price')"/>
+  <button (click)="addProduct($event)">Add</button>
+</div>
